name:                journal
version:             0.1
description:         Simple command line tool that lets you make journal entries
license:             BSD2
license-file:        LICENSE
author:              Devin Nusbaum
maintainer:          d.w.nusbaum@gmail.com
build-Type:          Simple
cabal-Version:       >=1.2

executable journal
  Main-is:           Main.hs
  Build-Depends:     base >= 3, directory, haskeline, old-locale, time, transformers
  ghc-options:       -Wall -O
