name:                log
version:             0.1
description:         Simple logging tool
license:             BSD3
license-file:        LICENSE
author:              Devin Nusbaum
maintainer:          d.w.nusbaum@gmail.com
build-Type:          Simple
cabal-Version:       >=1.2

executable log
  Main-is:           Main.hs
  Build-Depends:     base >= 3, directory, haskeline, old-locale, time, transformers
  ghc-options:       -Wall -fno-warn-unused-do-bind -funbox-strict-fields -O
